Show breakpoint in the footer during development

--- a/packages/website/src/components/SiteFooter.astro
+++ b/packages/website/src/components/SiteFooter.astro
@@ -1,8 +1,10 @@
 ---
 import Link from '@/components/Link.astro'
+import Breakpoint from '@/components/Breakpoint.astro'
 ---
 
 <footer class="cntnr flex items-center justify-between border-t py-4">
   <span class="italic text-subtle"> Thanks for visiting!</span>
+  <Breakpoint />
   <Link url="https://github.com/dhruvkb/portfolio">Source</Link>
 </footer>
