Remove redundant utilities

--- a/packages/website/src/components/EpicCard.astro
+++ b/packages/website/src/components/EpicCard.astro
@@ -23,7 +23,7 @@ const { epic } = Astro.props
     {
       epic.projects.map((project) => (
         <li>
-          <div class="flex items-center">
+          <div class="flex">
             <span>{project.name}</span>
             <span class="ml-auto text-subtle">
               {project.technologies?.map((technology) => (
