Add a few more fun facts

--- a/packages/website/src/components/FunFact.astro
+++ b/packages/website/src/components/FunFact.astro
@@ -6,6 +6,8 @@
   /** Randomly display a fun fact about me. */
 
   const facts = [
+    'writes code that sparks joy',
+    'is fuelled by cappuccinos',
     'is a computer whisperer',
     'handles tech support for family',
     'designs his own websites, repeatedly',
