Update elements to look good without CSS

--- a/packages/website/src/components/Kaomoji.astro
+++ b/packages/website/src/components/Kaomoji.astro
@@ -1,12 +1,12 @@
 <div
   class="flex text-5xl text-red"
   aria-hidden="true">
-  <div id="face">ʕ • ᴥ • ʔ</div>
-  <div
+  <span id="face">ʕ • ᴥ • ʔ</span>
+  <span
     id="hand"
     class="origin-bottom-left animate-wave motion-reduce:animate-none">
     ﾉ
-  </div>
+  </span>
 </div>
 
 <script>
