--- a/packages/website/src/components/SiteFooter.astro
+++ b/packages/website/src/components/SiteFooter.astro
@@ -4,7 +4,9 @@ import Breakpoint from '@/components/Breakpoint.astro'
 ---
 
 <footer class="cntnr flex items-center justify-between border-t py-4">
-  <span class="italic text-subtle"> Thanks for visiting!</span>
+  <div class="italic text-subtle">Thanks for visiting!</div>
   <Breakpoint />
-  <Link url="https://github.com/dhruvkb/portfolio">Source</Link>
+  <div>
+    <Link url="https://github.com/dhruvkb/portfolio">Source</Link>
+  </div>
 </footer>
