--- a/packages/website/src/components/Icon.astro
+++ b/packages/website/src/components/Icon.astro
@@ -16,7 +16,9 @@ const body = getBody(name, source)
   body && (
     <svg
       viewBox="0 0 24 24"
-      class="inline size-curr align-[-0.1em]">
+      class="inline size-curr align-[-0.1em]"
+      height="1rem"
+      width="1rem">
       {title && <title>{title}</title>}
       <Fragment set:html={body} />
     </svg>
