Fix typo in key 'issued'

--- a/packages/website/src/components/Table.astro
+++ b/packages/website/src/components/Table.astro
@@ -102,7 +102,7 @@ function isCurr(row: Row) {
                   <TimePeriod {...value} />
                 ) : key === 'published' ||
                   key === 'updated' ||
-                  key === 'issue' ? (
+                  key === 'issued' ? (
                   <DateComponent date={value} />
                 ) : (
                   value
