--- a/packages/website/src/components/Table.astro
+++ b/packages/website/src/components/Table.astro
@@ -25,6 +25,7 @@ function isCurr(row: Row) {
 
 <!-- Padding must be removed because cells are padded individually. -->
 <table
+  border="1px"
   class="cntnr px-0 transition"
   x-data={`{ activeGroup: "" }`}>
   <thead class="border-y bg-surface0">
