Add more fun facts

--- a/packages/website/src/components/FunFact.astro
+++ b/packages/website/src/components/FunFact.astro
@@ -27,6 +27,12 @@
     'is secretly a dog on the Internet',
     'is a <del>pythonista</del> <del>pythoneer</del> parselmouth',
     'is [🚧 WIP], like his code',
+    'is a wallflower',
+    'lives in a terminal',
+    'spent way too much time building this site',
+    'has some good ideas, but mostly bad ones',
+    'can spend inordinate hours to automate a task that takes minutes',
+    'painstakingly maintains his dotfiles',
   ]
   const fact = facts[Math.floor(Math.random() * facts.length)] ?? ''
 
