--- a/packages/website/src/components/Table.astro
+++ b/packages/website/src/components/Table.astro
@@ -49,7 +49,7 @@ function isCurr(row: Row) {
             groupId: row.groupId ?? idx,
             categories: 'post' in row.data && row.data.post?.data.categories,
           })}
-          x-show="$store.writings.isActiveCategoryOverlap(categories)"
+          x-show="!activeCategories.length || activeCategories.some(item => categories.includes(item))"
           x-bind:class="{ 'opacity-30': activeGroup && groupId !== activeGroup }"
           class="relative transition after:absolute after:inset-y-0 after:start-0 after:bg-red hover:bg-surface0 [&[data-is-curr]]:bg-surface0 [&[data-is-curr]]:after:w-1"
           class:list={[{ 'border-b': row.isLastSibling }]}
