--- a/packages/website/src/components/FunFact.astro
+++ b/packages/website/src/components/FunFact.astro
@@ -1,6 +1,6 @@
 <em
   id="fun-fact"
-  class="text-red"
+  class="text-peach"
   >wears many other hats</em
 ><script>
   /** Randomly display a fun fact about me. */
