--- a/packages/website/src/components/Kaomoji.astro
+++ b/packages/website/src/components/Kaomoji.astro
@@ -1,5 +1,5 @@
 <div
-  class="flex text-5xl text-red"
+  class="flex text-5xl text-peach"
   aria-hidden="true">
   <span id="face">ʕ • ᴥ • ʔ</span>
   <span
