Add the index page

--- a/packages/website/src/components/Kaomoji.astro
+++ b/packages/website/src/components/Kaomoji.astro
@@ -1,5 +1,5 @@
-<div
-  class="flex text-5xl text-peach"
+<h1
+  class="flex"
   aria-hidden="true">
   <span id="face">ʕ • ᴥ • ʔ</span>
   <span
@@ -7,7 +7,7 @@
     class="origin-bottom-left animate-wave motion-reduce:animate-none">
     ﾉ
   </span>
-</div>
+</h1>
 
 <script>
   /** Render a waving kaomoji with randomly-chosen facial features. */
