Remove redundant class

--- a/packages/website/src/components/SiteHeader.astro
+++ b/packages/website/src/components/SiteHeader.astro
@@ -51,7 +51,7 @@ function getIsExactMatch(url: string): boolean {
     </span>
   </Link>
   <nav>
-    <ul class="my-0 flex list-none">
+    <ul class="flex list-none">
       {
         navLinks.map((link) => (
           <li class="me-4 last:me-0">
