--- a/packages/website/src/components/TimePeriod.astro
+++ b/packages/website/src/components/TimePeriod.astro
@@ -32,7 +32,7 @@ const endReadable = end && dateReadable(end)
       <Fragment>
         {/* prettier-ignore */}
         <Fragment>
-          <span class="animate-pulse text-red" aria-hidden="true">&bull;</span>Present
+          <span class="animate-pulse pdf:animate-none text-red" aria-hidden="true">&bull;</span>Present
         </Fragment>
       </Fragment>
     )
