Dim the icon color in PDF mode

--- a/packages/website/src/components/ContactList.astro
+++ b/packages/website/src/components/ContactList.astro
@@ -33,7 +33,7 @@ const items = [
     items.map((item) => (
       <li>
         <div class="flex items-center gap-2">
-          <span class="text-peach pdf:text-default">
+          <span class="text-peach pdf:text-subtle">
             <Icon
               source={item.icon.source}
               name={item.icon.name}
